fixed the overlapping issue of the rotating cube

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   --fw-reg: 300;
   --fw-bold: 700;
 
-  --clr-light: #fff;
+  --clr-light: #f4f4f4;
   --clr-dark: #303030;
   --clr-accent: #16e0bd;
 
@@ -44,6 +44,8 @@
 html {
   scroll-behavior: smooth;
 }
+
+
 
 body {
   background: var(--clr-light);
@@ -152,6 +154,10 @@ h3 {
   margin-bottom: 1em;
   padding: 0.25em 1em;
   line-height: 1.6;
+}
+
+.section__subtitle--intro {
+  margin-bottom: 60px;
 }
 
 /*****************Navigation****************/
@@ -511,6 +517,12 @@ header {
     /* flex-direction: column; */
     font-size: 16px;
   }
+
+.d-wrapper .dynamic-txts {
+ 
+  display: block;
+}
+
 }
 
 
@@ -1228,4 +1240,104 @@ header {
 .reveal.active{
   transform: translateY(0);
   opacity: 1;
+}
+
+
+
+.d-wrapper .static-txt {
+  color: #fff;
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.d-wrapper .dynamic-txts {
+  margin-left: 15px;
+  height: 90px;
+  line-height: 90px;
+  /* background-color: var(--clr-accent); */
+  overflow: hidden;
+  display: none;
+}
+
+.dynamic-txts li {
+  list-style: none;
+  color: var(--clr-accent);
+  /* color: #fc6d6d; */
+  font-size: 60px;
+  font-weight: 500;
+  position: relative;
+  top: 0;
+  animation: slide 3s steps(4) infinite;
+}
+
+@keyframes slide {
+  100% {
+    top: -360px;
+  }
+  
+}
+
+.dynamic-txts li span {
+  position: relative;
+}
+
+.dynamic-txts li span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #f4f4f4;
+  border-left: 2px solid  var(--clr-accent);
+  /* border-left: 2px solid #fc6d6d; */
+  animation: typing 1.5s steps(10) infinite;
+  
+}
+
+@keyframes typing {
+  100% {
+    left: 100%;
+    margin: 0 -35px 0 35px
+  }
+  
+}
+/* 
+.my-name {
+  position: relative;
+}
+
+.my-name::before, .my-name::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.my-name::before {
+  animation: typewriter 4s steps() forwards;
+  background: red;
+}
+
+@keyframes typewriter {
+  to {
+    left: 100%;
+  }
+} */
+
+.d-wrapper {
+  /* display: none; */
+  display: inline-flex;
+  align-items: center;
+}
+
+@media (min-width: 1200px) {
+ 
+
+.d-wrapper .dynamic-txts {
+ 
+  display: block;
+}
+
 }
